--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8083
+
+# database init
+spring.datasource.url=jdbc:h2:./testdb
+spring.datasource.username=simpsonsdb
+spring.datasource.password=simpsonsdb
+spring.jpa.hibernate.ddl-auto=update
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 
