added SimpsonsCharacterRepository with first findAll functionality and test. added characters data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# tells SpringBoot application to run on specific port
 server.port=8083
 
 # database init
@@ -9,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+spring.datasource.schema=classpath*:db/schema.sql
+spring.datasource.data=classpath*:db/data.sql
