changing from H2 db to embedded mongo DB. Added mongo repositories, TODO - load characters and phrases at startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 # tells SpringBoot application to run on specific port
 server.port=8083
 
-# database init
-spring.datasource.url=jdbc:h2:./testdb
-spring.datasource.username=simpsonsdb
-spring.datasource.password=simpsonsdb
-spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.database=simpsons_db
+spring.mongodb.embedded.storage.database-dir=./mongodb/
 
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-
-spring.datasource.schema=classpath*:db/schema.sql
-spring.datasource.data=classpath*:db/data.sql
+mongo.url=localhost
+#spring.mongodb.embedded.version=3.5.5
+spring.datasource.data=./db/characters.json
